# eloko_te

./: CMakeLists.txt
forms/qml/: Assets.qml  Main.qml  RegistrationStackView.qml  Typography.qml
forms/qml/components/: AddLessonForm.qml  CourseForm.qml  CourseItemDelegate.qml  ErrorMsg.qml  IsLoadingItem.qml  ProfileMenu.qml  SyllabusForm.qml  SyllabusItemDelegate.qml  SyllabusLessonItemDelegate.qml
forms/qml/pages/: AdminsPage.qml  HomePage.qml  LoginPage.qml  ReadingPage.qml  SignUpPage.qml  SyllabusLessonsPage.qml  SyllabusPage.qml
include/: admin.h  courseListData.h  courseListModel.h  operations.h  request.h  response.h  syllabusListData.h  syllabusListModel.h  syllabussearchfilterproxymodel.h
src/: admin.cpp  courseListData.cpp  courseListModel.cpp  main.cpp  operations.cpp  request.cpp  response.cpp  syllabusListData.cpp  syllabusListModel.cpp  syllabussearchfilterproxymodel.cpp
